--- a/Select/css/select.css
+++ b/Select/css/select.css
@@ -4,7 +4,7 @@
 .select-c{
 	position: absolute;
     min-width: 250px;;
-    border: 1px solid #ddd;
+    border: 1px solid #404040;
     border-radius: 6px;
 }
 .select-ipt{
@@ -24,6 +24,7 @@
     max-height: 250px;
    	border-top:1px solid #ddd;
     overflow: auto;
+    background-color: #fff;
 }
 .select-dt span{
 	display: block;
